syntax = "proto3";

option go_package = "./dice";

// The service definition.
service Tutorial {
    // RollDice method
    rpc RollDice (RollDiceRequest) returns (RollDiceResponse) {}
    rpc HelloMethod (Empty) returns (Hello) {}
}
  
message Empty {
}

message Hello {
    string foo = 1;
}

// The request message containing coming request
message RollDiceRequest {
    int32 num = 1;
}
  
// The response message containing response data
message RollDiceResponse {
    repeated int32 dice = 1;
}